--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=desafio-angular-api
+spring.docker.compose.enabled=false
 
 !========== database config =============!
-spring.datasource.url=jdbc:postgresql://localhost:5432/desafio
+spring.datasource.url=jdbc:postgresql://localhost:5432/angular-api
 spring.datasource.username=postgres
-spring.datasource.password=dbpassword123
+spring.datasource.password=paodepovilho2003
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
