--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+!========== cache config =============!
+spring.cache.type=redis
+
 !========== security config =============!
 api.security.token = ${JWT_SECRET:my-secret-key}
 logging.level.org.springframework.security=DEBUG
