--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=desafio-angular-api
 spring.docker.compose.enabled=false
 
 !========== database config =============!
-spring.datasource.url=jdbc:postgresql://localhost:5432/angular-api
+spring.datasource.url=jdbc:postgresql://data-base:5432/desafio-angular-api
 spring.datasource.username=postgres
 spring.datasource.password=paodepovilho2003
 spring.jpa.hibernate.ddl-auto=update
@@ -11,6 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 !========== cache config =============!
 spring.cache.type=redis
+spring.data.redis.host=redis
 
 !========== security config =============!
 api.security.token = ${JWT_SECRET:my-secret-key}
